<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DroidVideoProxyActivity!</string>
    <string name="app_name">Mobile Collaboration Platform</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="proxyEnabled">Proxy enabled</string>
    <string name="proxyDisabled">Proxy disabled</string>
    <string name="starting">Starting proxy&#8230; Please wait&#8230;</string>
    <string name="stopping">Stopping proxy&#8230;</string>
    <string name="runningInBackground">Running in the background</string>
    <string name="signallingTechnology">Signalling technology</string>
    <string-array name="signallingTechnologies">
        <item>WiFi</item>
        <item>Zigbee</item>
    </string-array>
    <string name="clearCache">Clear cache</string>
    <string name="sharedFolder">Shared folder</string>
    <string name="maxCacheSize">Maximum cache size in MB</string>
    <string name="debugOptions">Debug options</string>
    <string name="noWifiAdHoc">No wifi ad-hoc</string>
    <string name="noIptablesRedirect">No Iptables redirect</string>
    <string name="serversListenOnAllInterfaces">Servers listen on all interfaces</string>
    <string name="disableFirewall">Disable firewall</string>
    <string name="legacyHttpFiles">Legacy HTTP files using ICN (comma separated)</string>
    <string name="queryManagerNotFoundWarning">WARNING: No QueryManager application was found. You won\'t be able to answer to queries.</string>
    <string name="error">Error</string>
    <string name="errorStartingProxy">An error occurred while starting proxy.</string>
    <string name="switchWifiOff">You must switch Wifi off before starting proxy!</string>
    <string name="ok">OK</string>
    <string name="closeApp">Close app</string>

</resources>