<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/proxyDisabled" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start" />

            <Button
                android:id="@+id/buttonStop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <!-- <TextView
                android:id="@+id/textStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/proxyDisabled"
                android:textAppearance="?android:attr/textAppearanceMedium" />-->

            <TextView
                android:id="@+id/textViewSignallingTechnology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signallingTechnology" />

            <Spinner
                android:id="@+id/spinnerSignallingTechnology"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/signallingTechnologies" >
            </Spinner>

            <TextView
                android:id="@+id/textViewMaximumCacheSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxCacheSize" />

            <EditText
                android:id="@+id/editTextMaxCacheSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/checkBoxClearCache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clearCache" />

            <TextView
                android:id="@+id/textViewDebugOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/debugOptions" />

            <CheckBox
                android:id="@+id/checkBoxNoWifiAdHoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noWifiAdHoc" />

            <CheckBox
                android:id="@+id/checkBoxNoIptablesRedirect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noIptablesRedirect" />

            <CheckBox
                android:id="@+id/checkBoxServersListenOnAllInterfaces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/serversListenOnAllInterfaces" />
            
            <CheckBox
                android:id="@+id/checkBoxDisableFirewall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disableFirewall" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>